<resources>
    <string name="app_name">Curiosity</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_with_facebook">Sign In With <b>Facebook</b></string>
    <string name="sign_in_with_google">Sign In With <b>Google</b></string>
    <string name="sign_in_with_twitter">Sign In With <b>Twitter</b></string>
    <string name="sign_up_with_email"><b>Sign Up</b> \nWith Email</string>
    <string name="sign_in_with_email"><b>Sign In</b> \nWith Email</string>
    <string name="terms_and_policy">Terms &amp; Conditions and Privacy Policy</string>
</resources>
