<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="xyz.winmyataung.curiosity.MainActivity">

   <!-- <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>-->


    <RelativeLayout
        android:id="@+id/rl_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/curiosity_icon"
           android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btn_sign_in_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="300dp"
            android:hint="@string/sign_in_with_facebook"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/white_full"
            android:drawableLeft="@drawable/facebook_icon"
            />

        <Button
            android:id="@+id/btn_sign_in_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn_sign_in_fb"
            android:hint="@string/sign_in_with_google"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/white_full"
            android:drawableLeft="@drawable/google_icon"/>

        <Button
            android:id="@+id/btn_sign_in_twitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/btn_sign_in_google"
            android:hint="@string/sign_in_with_twitter"
            android:textSize="20dp"
            android:background="@color/colorPrimary"
            android:textColorHint="@color/white_full"
            android:drawableLeft="@drawable/twitter_icon"/>

        <Button
            android:id="@+id/btn_sign_up_with_email"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_sign_in_twitter"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/sign_up_with_email"
            android:textColorHint="@color/white_full"
            android:background="@color/grey"
            android:drawableLeft="@drawable/mail_icon" />

        <Button
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/btn_sign_in_twitter"
            android:layout_marginRight="16dp"
            android:layout_marginTop="10dp"
            android:hint="@string/sign_in_with_email"
            android:textColorHint="@color/white_full"
            android:background="@color/grey"
            android:drawableLeft="@drawable/mail_icon"/>

        <TextView
            android:id="@+id/tv_terms_and_condition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/terms_and_policy"
            android:textColor="#345464"
            android:layout_alignParentBottom="true"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            />


    </RelativeLayout>

   <!-- <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />-->

</android.support.design.widget.CoordinatorLayout>
